--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,10 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^7.0.0-alpha.2"
+    "sequelize": "^7.0.0-alpha.2",
+    "uuid": "^8.3.2"
   }
 }
