--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "sass": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "glob-parent": "^6.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
